# ai-usagebar-win

./: .gitignore  AiUsageBar.sln  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
AiUsageBar/: AiUsageBar.csproj  App.xaml  App.xaml.cs  Converters.cs  app.manifest
AiUsageBar.Tests/: AiUsageBar.Tests.csproj  CredsTests.cs  LogicTests.cs
AiUsageBar/Models/: Usage.cs  VendorId.cs  VendorReport.cs  ViewModels.cs
AiUsageBar/Services/: Config.cs  Creds.cs  NativeMethods.cs  OAuthClient.cs  Poller.cs  Renderer.cs  ShortcutService.cs  StartupService.cs  TrayIconFactory.cs  TrayService.cs
AiUsageBar/Services/Vendors/: AnthropicVendor.cs  DeepseekVendor.cs  JsonUtil.cs  OpenAiVendor.cs  OpenRouterVendor.cs  VendorClient.cs  ZaiVendor.cs
AiUsageBar/Views/: PopupWindow.xaml  PopupWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
screenshots/: README.md
src/: config.rs  creds.rs  main.rs  render.rs  tray.rs  ui.rs  usage.rs  winui_stub.rs  winui_win.rs
src/vendors/: anthropic.rs  deepseek.rs  mod.rs  openai.rs  openrouter.rs  zai.rs
