[package]
name = "ai-usagebar-win"
version = "0.2.0"
edition = "2024"
description = "Native Windows system-tray app showing AI plan usage across Anthropic, OpenAI, Z.AI, OpenRouter, and DeepSeek"
repository = "https://github.com/FranzoiDev/ai-usagebar-win"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tao = "0.35.3"
toml = "1.1.2"
tray-icon = "0.24.1"

# Native Windows UI (popup + settings) is drawn with raw Win32 controls.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
